resources/alpine_pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
spec:
  containers:
  - name: alpine
    image: alpine
    command: ['sh', '-c', 'while true; do sleep 3600; done']
