resources/pod_with_pvc.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: pvc-example
  namespace: default
spec:
  restartPolicy: Always
  containers:
  - name: pvc-example
    image: "registry.k8s.io/busybox"
    command: ["/bin/sh", "-c", "while true; do echo logs data >> /output/output.log; sleep 5; done"]
    volumeMounts:
    - name: volume
      mountPath: /output
  volumes:
  - name: volume
    persistentVolumeClaim:
      claimName: my-pvc
