resources/nodejs_app.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: nodejs
  labels:
    app.kubernetes.io/name: nodejs-app
spec:
  containers:
  - name: nodejs
    image: mcdeltat/node-web-app:latest
    ports:
    - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nodejs-app
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 32767
